# thinharness

./: .gitignore  .gitmodules  1984-summary.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  decisions.md  docs.md  pyproject.toml  table.md  validation-feedback-v1.md
.context/: plan-near-limit-guidance.md  structured-output-pydantic-ai-comparison.md
.github/workflows/: ci.yml  pages.yml  release.yml
.html/: architecture-review-1780086024.html
.plans/: 01-stateless-model.md  02-parallel-tool-execution.md  03-subagents.md  04-hooks-and-limits.md  05-async-conversion.md  06-structured-output.md  08-resume.md  09-mcp-support.md  10-near-limit-guidance.md  11-parallel-llm-tool.md  12-parallel-llm-structured-output.md  13-langfuse-tracing.md  14-structured-turn-resolution-and-parallel-llm.md  15-runtime-context-and-tool-execution-architecture.md  16-search-tools.md  17-search-support-extraction.md  18-tool-prompt-defaults.md  19-background-tools.md  20-leaf-types-and-run-loop-decomposition.md  21-batch-edit-tool.md  22-bash-prototype-tool.md  23-human-in-the-loop.md  23-sdk-event-streaming.md  25-background-completion-semantics.md  26-architecture-cleanup.md  27-jsonl-search-range-filters.md  28-jsonl-field-search-snippets.md  29-unified-transcript-log.md  30-tracing-consolidation.md  31-reasoning-fidelity.md  32-remove-background-tools.md  33-session-seam-and-turn-machine.md  final-result-resume-note.md  hooks-and-limits.md  image-inputs.md  parallel-llm-tool.md  structured-turn-resolution-and-parallel-llm.md  subagents-fork-mode.md  subagents.md  tool-validation-and-retry.md  (+1 more)
assets/: thinharness-run-loop.drawio
docs/: THIRD_PARTY_NOTICES.md  architecture.md  behavior.md  decisions.md  docs.md  releasing.md  table.md
docs/site/: about.html  examples.html  explainer.html  index.html  transcripts.html
docs/site/about/: index.html
docs/site/assets/: site.css
docs/site/examples/: index.html
docs/site/explainer/: index.html
e2e/: README.md  control_plane_journey.py  langfuse_tracing_journey.py  mcp_journey.py  parallel_llm_agent_journey.py  parallel_llm_tool_journey.py  skills_journey.py  structured_output_journey.py  workspace_tools_journey.py
examples/: __init__.py  longmemeval.md
examples/web_research_report/: README.md  __init__.py  agent.py
filesystem_harness/: __init__.py  core.py
scripts/: build_site.py  build_transcripts.py
tests/: conftest.py  fakes.py  test_approvals.py  test_background_tools.py  test_bash_tool.py  test_file_tools.py  test_harness.py  test_hooks.py  test_mcp.py  test_mcp_optional_dependency.py  test_parallel_llm.py  test_parallel_tools.py  test_providers.py  test_reasoning_fidelity.py  test_resume.py  test_skills.py  test_streaming.py  test_structured_output.py  test_subagents.py  test_tool_retry.py  test_tracing.py  test_turns.py  test_web_research_report_example.py
thinharness/: __init__.py  approvals.py  core.py  defaults.py  events.py  hooks.py  jsonl.py  mcp.py  output.py  projections.py  providers.py  runtime.py  skills.py  subagents.py  tool_execution.py  tools.py  tracing.py  turns.py  types.py
thinharness/tools/: __init__.py  base.py  bash.py  filesystem.py  jsonl.py  mcp.py  parallel_llm.py  search_support.py  skills.py
