[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thinharness"
version = "0.1.0"
description = "Minimal filesystem agent harness with provider-backed Responses-like models."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "thinharness maintainers"}]
keywords = ["agents", "responses-api", "filesystem", "skills", "harness"]

[project.optional-dependencies]
dev = ["pytest>=8"]
tracing = [
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
]

[tool.setuptools.packages.find]
include = ["thinharness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
