[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thinharness"
version = "0.1.0"
description = "Minimal filesystem agent harness with provider-backed Responses-like models."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "thinharness maintainers"}]
keywords = ["agents", "responses-api", "filesystem", "skills", "harness"]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.25", "ruff>=0.14"]
tracing = [
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
]
mcp = [
    "mcp>=1.23.0",
]

[tool.setuptools.package-data]
thinharness = ["py.typed"]

[tool.setuptools.packages.find]
include = ["thinharness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 160
extend-exclude = ["vendor", "experiments", ".context"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.14",
]
