[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thinharness"
version = "0.1.0"
description = "Minimal filesystem agent harness with provider-backed Responses-like models."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "thinharness maintainers"}]
keywords = ["agents", "responses-api", "filesystem", "skills", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.13.4",
]

[project.urls]
Homepage = "https://github.com/ryanbbrown/thinharness"
Repository = "https://github.com/ryanbbrown/thinharness"
Issues = "https://github.com/ryanbbrown/thinharness/issues"
Changelog = "https://github.com/ryanbbrown/thinharness/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pyright>=1.1.409", "pytest>=8", "pytest-asyncio>=0.25", "pytest-cov>=7", "ruff>=0.14"]
tracing = [
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
]
mcp = [
    "mcp>=1.23.0",
]

[tool.setuptools.package-data]
thinharness = ["py.typed"]

[tool.setuptools.packages.find]
include = ["thinharness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=thinharness",
    "--cov-report=term-missing",
]

[tool.coverage.run]
branch = true
source = ["thinharness"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 160
extend-exclude = ["vendor", "experiments", ".context"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["thinharness"]
exclude = ["vendor", "experiments", ".context", "e2e", "tests"]
pythonVersion = "3.11"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7",
    "ruff>=0.14",
]
